dataset1235/2025-2/1955397009/users/4106021035/executions/3933884819_1934415188.log
== SUBMISSION (2025-08-31 19:36:24)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print(round(consumo, 3), "km/l")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Km rodados: Combustível: 9.802 km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Km rodados: Combustível: 2.0 km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: 14.286 km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: 14.286 km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Km rodados: Combustível: 18.119 km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Km rodados: Combustível: 5.0 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print("round(consumo, 3) km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Km rodados: Combustível: round(consumo, 3) km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:33:24)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print(round(consumo, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Km rodados: Combustível: 9.802
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
---- user output:
Km rodados: Combustível: 2.0
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: 14.286
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
---- user output:
Km rodados: Combustível: 14.286
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Km rodados: Combustível: 18.119
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
---- user output:
Km rodados: Combustível: 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:08)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print(round(consumo, 3)"km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3)"km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:33:58)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print(round(consumo, 3) "km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 9
    print(round(consumo, 3) "km/l")
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:34:19)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print('round(consumo, 3) km/l")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
File "XXXX", line 9
    print('round(consumo, 3) km/l")
          ^
SyntaxError: unterminated string literal (detected at line 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 19:36:06)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.

dist = float(input("Km rodados: "))
comb = float(input("Combustível: "))

consumo = dist/comb

print(round(consumo, 3), km/l)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4554
464.6
---- correct output:
9.802 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
-- TEST CASE 2:
---- input:
1.0
0.5
---- correct output:
2.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
-- TEST CASE 3:
---- input:
28.572
2
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
-- TEST CASE 4:
---- input:
500.0
35.0
---- correct output:
14.286 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
-- TEST CASE 5:
---- input:
2254
124.4
---- correct output:
18.119 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
-- TEST CASE 6:
---- input:
10.0
2.0
---- correct output:
5.0 km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(consumo, 3), km/l)
                             ^^
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
